== 0.23.0 2008-04-17

* installing newgem now displays a post-install message (from PostInstall.txt)
* uses github_username value from .rubyforge/user-config.yml
* moved EXTRA_DEPENDENCIES to top of config/hoe.rb
* websites/*.txt are processed as ERB templates

== 0.22.2 2008-04-07

* Cleaned up the REV cmd [Sascha Teske]
* Replaced hardcoded rspec values done in a hurry at RubyFools with parameterised values [Alsak Hellesoy]

== 0.22.1 2008-04-05

* moved the 'by Daniel Cadenas' reference to the correct template.rhtml
* renamed template.rhtml -> template.html.erb in gem + generators
* fixed broken install_rspec_stories test

== 0.22.0 2008-04-03

* script/console - irb/console for your gem under development [Orion]

== 0.21.0 2008-04-03

* New Generator: install_rspec_stories for rubygems
* module.rb - more advanced $:.unshift sequence/cmd

== 0.20.1 2008-03-30

* extconf generator
  * creates test/test_#{name}_extn.rb test file
  * creates .autotest file for *.c -> test/test_*_extn.rb
  * failed compilation destroyes *.o/so/bundle/dll files so tests fail too
  * USAGE has docco on files to ignore in SCM + hoe
* requirements.rb no longer loads main lib file; no idea why it did it before

== 0.20.0 2008-03-30

* extconf generator - for C-extensions
* Hoe instance stored in $hoe so can be accessed from tasks/*.rake

== 0.19.1 2008-03-27

* rspec "rake spec" supports spec/**/*_spec.rb search now [Steven Parkes]

== 0.19.0 2008-03-25

* Added newgem_theme long_box_theme [Daniel Cadenas]

== 0.18.0 2008-03-14

* Upgraded generated/local README.txt for latest hoe

== 0.17.1 2008-02-20

* remove options from 'env ruby' in newgem bin

== 0.17.0 2008-02-03

* Updated generated config/hoe.rb for latest hoe 1.5 requirements
* Added #!/usr/bin/env ruby line to bin/newgem
* Fixed docco for -T option (was '-t' in docco) [uploaded on 2008-1-3]

== 0.16.1 2007-11-13

* Oops, removed .git* from the hoe clean list as that blows away the .git folder...

== 0.16.0 2006-11-11
