@@ -24,14 +24,6 @@ def rubyforge_project_id
   RubyForge.new.autoconfig["group_ids"][RUBYFORGE_PROJECT]
 end
 
-def github_username
-  @github_username ||= begin
-    require 'newgem/rubyforge'
-    rubyforge_config = Newgem::Rubyforge.new
-    rubyforge_config.github_username
-  end
-end
-
 class Fixnum
   def ordinal
     # teens
