@@ -33,7 +33,7 @@
     <h1>New Gem Generator</h1>
     <div id="version"> <!--  class="clickable" onclick='document.location = ""; return true' -->
       <p>Get Version</p>
-      <a href="" class="numbers">0.22.2</a>
+      <a href="" class="numbers">0.23.0</a>
       <p>Featured in</p>
       <a  href="http://www.amazon.com/gp/redirect.html?ie=UTF8&location=http%3A%2F%2Fwww.amazon.com%2FBeginning-Ruby-Novice-Professional-Experts%2Fdp%2F1590597664%2F&tag=drnic-20&linkCode=ur2&camp=1789&creative=9325" class="book"><img src="images/beginning-ruby.jpg" /></a>
     </div>
