@@ -1,3 +1,3 @@
 // Announcement JS file
-var version = "0.22.2";
+var version = "0.23.0";
 MagicAnnouncement.show('compositekeys', version);
