@@ -1,4 +1,4 @@
 // Version JS file
-var version = "0.22.2";
+var version = "0.23.0";
 
 document.write(" - " + version);
